# nnsmith

./: .gitignore  check_report.sh  fuzz.sh  fuzz_gcov.sh  gen.sh  pyproject.toml  report.sh  show_gcov.sh  torch_exec.sh
bug/: 1.py  1_min.py  3.py  4_min.py
doc/: frontend_design.zh-cn.md
experiments/: collect_python_coverage.py
nnsmith/: narrow_spec.py
nnsmith/backends/: factory.py  torchdynamo.py
nnsmith/cli/: model_exec.py  report_syn.py
nnsmith/materialize/: __init__.py
nnsmith/materialize/torch/: __init__.py  symbolnet.py
