[project]
name = "nnsmith"
version = "0.1"
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "nnsmith/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"


[tool.poetry.dependencies]
z3-solver = "^4.14.1.0"
python = ">=3.10 <4.0"
torch = "^2.6.0"
numpy = "^2.2.4"
multipledispatch = "^1.0.0"
intel-extension-for-pytorch = "^2.6.0"
hydra-core = "^1.3.2"
appdirs = "^1.4.4"
hydra-colorlog = "^1.2.0"
loguru = "^0.7.3"
setuptools = "^78.1.0"

